<resources>
    <string name="app_name">BookSmawt</string>
    <string name="terms_of_use_a">By continuing, you agree to BookSmawt\'s</string>
    <string name="terms_of_use_b">Terms of Use</string>
    <string name="terms_of_use_c">Privacy Policy</string>
    <string name="login_button_text">Login</string>
    <string name="login_header">Login to your Account</string>
    <string name="booksmawt">BOOKSMAWT</string>
    <string name="or">OR</string>
    <string name="login_with_twitter">Login with Twitter</string>
    <string name="login_with_google">Login with Google</string>
    <string name="register">Create an Account</string>
    <string name="and"><![CDATA[&]]></string>
    <string name="title_activity_base">Base</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>

    <!-- Notifications -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="channel_name">BookSmawt Channel</string>
    <string name="channel_description">BookSmawt Main Notification Channel</string>
    <string name="CHANNEL_ID">BookSmat Channel</string>
</resources>